Update to latest upstream release

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "apache-tomcat-7.0.42-src.tar.gz": 3f1061428dc6274e5b6159ed06462702e0550bd1
+  apache-tomcat-7.0.47-src.tar.gz: deeac2592c1d2c0f280126ed6186005a375ae46a
